# 2024csc-projects

./: .gitignore
project_1/csc2024-project1-docker/: README.md  build.sh  csc2024-project1-docker-compose.yml  csc2024-project1.Dockerfile
project_1/csc2024-project1-docker/109550014-109611087/: LICENSE  build.sh
project_1/csc2024-project1-docker/109550014-109611087/all/: CMakeLists.txt
project_1/csc2024-project1-docker/109550014-109611087/include/: util.h
project_1/csc2024-project1-docker/109550014-109611087/scripts/: config.sh
project_1/csc2024-project1-docker/109550014-109611087/source/: session.cpp  util.cpp
project_1/csc2024-project1-docker/109550014-109611087/standalone/source/: client.cpp
project_1/csc2024-project1-docker/csc2024-project1/: .gitignore  Makefile
project_1/csc2024-project1-docker/csc2024-project1/109550014-109611087/: CMakeLists.txt  Makefile
project_1/csc2024-project1-docker/csc2024-project1/109550014-109611087/cmake/: CPM.cmake
project_1/csc2024-project1-docker/csc2024-project1/109550014-109611087/include/: encoder.h  session.h  session.h.bak
project_1/csc2024-project1-docker/csc2024-project1/109550014-109611087/source/: encoder.cpp  sadb.cpp
project_1/csc2024-project1-docker/csc2024-project1/109550014-109611087/standalone/: CMakeLists.txt
project_1/csc2024-project1-docker/csc2024-project1/109550014-109611087/standalone/source/: main.cpp
project_1/csc2024-project1-docker/csc2024-project1/cmake/: tools.cmake
project_1/csc2024-project1-docker/csc2024-project1/include/: sadb.h
project_1/csc2024-project1-docker/csc2024-project1/scripts/: answer.txt
project_1/csc2024-project1-docker/csc2024-project1/source/: sadb.cpp  session.cpp  util.cpp
project_1/csc2024-project1-docker/csc2024-project1/standalone/source/: server.cpp
project_2/: Makefile  README.md  arp.cpp  arp.h  command.cpp  command.h  filter.cpp  filter.h  mitm_attack.cpp  mitm_attack.h  pharm_attack.cpp  pharm_attack.h  scan.cpp  scan.h  spoof.cpp  spoof.h
project_3/: Makefile  README.md  attack_server  attacker_server  crack_attack  crack_attack.py  dummy_payload  make_payload  set_IP_payload  virus  worm
project_4/: requirements.txt
project_4/solutions/: .gdb_history
project_4/solutions/1-1/: shop.py
project_4/solutions/1-2/: get_secret  magic.py  time.c
project_4/solutions/1-3/: .gdb_history  dlresolve.py  fixed.py  get_addresses.sh  leak.py  ret2libc.py
project_4/solutions/2-1/: .gdb_history  sol.py
project_4/solutions/pack/: I-1.py  I-2.py  I-3.py  I-4.sh  II-1.py  Makefile
project_4/source/fmt/: .gdb_history  fmt  fmt.c
project_4/source/hello/: hello  hello.c
project_4/source/magic/: .gdb_history  a.out  magic  magic.c
project_4/source/ret2libc/: .gdb_history  a.out  env.txt  ret2libc  ret2libc.c
project_4/source/shop/: shop  shop.c
